--- a/helper/less/header.less
+++ b/helper/less/header.less
@@ -1,10 +1,12 @@
 #header {
-	padding-top: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	line-height: 20px;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	/*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
 	font-size: 14px;
 	font-weight: 300;
 	color: #404040;
+	background: #373737 url("../img/bg.png") 0 0 repeat;
 
 	.container {
 		text-align: center;
