--- a/helper/less/nav_list.less
+++ b/helper/less/nav_list.less
@@ -76,15 +76,15 @@
 			padding: 0 0 0 20px;
 			vertical-align: top;
 			color: #476e7d;
-			font-weight: bold;
 			text-decoration: none;
 			height: 100%;
 			display: block;
-			line-height: 3.2;
+			line-height: 2.5;
 			text-shadow: 0 1px 0 white;
 			overflow: hidden;
 			white-space: nowrap;
 			outline: none;
+			font-size: 11pt;
 		}
 	}
 
