--- a/helper/less/main.less
+++ b/helper/less/main.less
@@ -1,18 +1,23 @@
-body {
-	background: #373737 url("../img/bg.png") 0 0 repeat;
-	font-family: Verdana, Arial, sans-serif;
+@font-face {
+	font-family: Ubuntu;
+	src: url(../fonts/Ubuntu-R.ttf);
+}
+
+html, body {
+	font-family: Ubuntu, Verdana, Arial, sans-serif;
+	height: 100%;
 }
 
 #main {
 	width: 100%;
 	padding-bottom: 80px;
+	background: #373737 url("../img/bg.png") 0 0 repeat;
 
 	.wrapper {
 		font-size: 0;
 		min-height: 900px;
 		min-width: 1000px;
 		background-color: #f4f4f4;
-		margin: 10px;
 
 		.left {
 			width: 25%;
