--- a/helper/less/mixins.less
+++ b/helper/less/mixins.less
@@ -97,10 +97,10 @@
 }
 
 // Drop shadows
-.box-shadow(@shadow) {
-  -webkit-box-shadow: @shadow;
-     -moz-box-shadow: @shadow;
-          box-shadow: @shadow;
+.box-shadow(@shadow, @shadow2: 0 0 0) {
+  -webkit-box-shadow: @shadow, @shadow2;
+     -moz-box-shadow: @shadow, @shadow2;
+          box-shadow: @shadow, @shadow2;
 }
 
 // Transitions
