--- a/helper/less/promo.less
+++ b/helper/less/promo.less
@@ -75,9 +75,12 @@
 				padding-top: 40px;
 
 				.btn {
-					font-size: 18pt;
-					font-weight: normal;
-					padding: 19px 55px 20px 55px;
+
+					&.big {
+						font-size: 18pt;
+						font-weight: normal;
+						padding: 19px 55px 20px 55px;
+					}
 				}
 			}
 
