--- a/helper/less/buttons.less
+++ b/helper/less/buttons.less
@@ -13,7 +13,7 @@
 	cursor: pointer;
 	line-height: 1;
 
-	/*.inline-block;*/
+	.inline-block;
 	.box-shadow(inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.3));
 	#gradient.vertical(#5e87cd, #4664bd);
 
@@ -53,6 +53,21 @@
 		
 		&:active {
 			#gradient.vertical(#68b185, #57a270);
+		}
+	}
+
+	&.gray {
+		border: 1px solid #6c7277;
+		text-shadow: 0 -1px 0 #7e8287;
+
+		#gradient.vertical(#979b9f, #74767b);
+
+		&:hover {
+			#gradient.vertical(#a1a5a8, #878a90);
+		}
+		
+		&:active {
+			#gradient.vertical(#8a8d90, #707276);
 		}
 	}
 }
