--- a/src/Acme/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
 			<p class="promo1">Удобный, быстрый и простой блокнот</p>
 			<p class="promo2">теперь ваши заметки всегда будут под рукой</p>
 			<div class="register">
-				<input class="btn green"type="button" value="Регистрация" />
+				<a href="#registration" class="btn green big js-route">Регистрация</a>
 			</div>
 			<img src="../img/i-book.png" class="promo-img" />
 		</div>
@@ -26,4 +26,18 @@
 		</div>
 	</div>
 </div>
+
+<div id="templates">
+	{% include 'AcmeMainBundle:Underscore:register_block.html.twig' %}
+</div>
+
+{% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
+
+	<script src="/js/app_homepage.js"></script>
+	<script src="/js/HomepageRouter.js"></script>
+	<script src="/js/models/Registration.js"></script>
+	<script src="/js/views/RegistrationView.js"></script>
 {% endblock %}
