--- a/helper/less/note-content.less
+++ b/helper/less/note-content.less
@@ -67,5 +67,11 @@
 				text-decoration: none;
 			}
 		}
+
+		pre {
+			code {
+				font-family: monospace, Verdana, Arial, sans-serif;
+			}
+		}
 	}
 }
