--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,20 +2,22 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Блокнот{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('/css/note.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('/js/libs/highlightjs/styles/default.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.png') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="/js/libs/jquery-2.0.2.min.js"></script>
+            <script src="/js/libs/jquery-2.1.1.min.js"></script>
             <script src="/js/libs/jquery-ui-1.10.2.custom.min.js"></script>
             <script src="/js/libs/underscore.js"></script>
             <script src="/js/libs/json2.js"></script>
             <script src="/js/libs/backbone.js"></script>
+            <script src="/js/libs/highlightjs/highlight.pack.js"></script>
         {% endblock %}
     </body>
 </html>
