высота строки кода

--- a/helper/less/note-content.less
+++ b/helper/less/note-content.less
@@ -71,6 +71,10 @@
 		pre {
 			code {
 				font-family: monospace, Verdana, Arial, sans-serif;
+
+				span {
+					line-height: 1.5;
+				}
 			}
 		}
 	}
